Fix unknown type issue with SDK
